# sparq2026-hackathon

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  genie_jni.cpp
app/src/main/cpp/genie/: GenieAccuracy.h  GenieCommon.h  GenieDialog.h  GenieEngine.h  GenieLog.h  GenieNode.h  GeniePipeline.h  GenieProfile.h  GenieSampler.h  GenieTokenizer.h
app/src/main/java/com/aster/ondevice/: App.kt
app/src/main/java/com/aster/ondevice/agent/: OnDeviceAgent.kt  SystemPromptBuilder.kt  ToolDefinitions.kt  ToolDispatcher.kt
app/src/main/java/com/aster/ondevice/asr/: AndroidAsrEngine.kt  AsrEngine.kt
app/src/main/java/com/aster/ondevice/data/: SettingsDataStore.kt
app/src/main/java/com/aster/ondevice/di/: AppModule.kt
app/src/main/java/com/aster/ondevice/llm/: GenieEngine.kt  LiteRtEngine.kt  LlamaConfig.kt  LlmEngine.kt  NativeToolCallingEngine.kt  QaicEngine.kt  RoutingLlmEngine.kt
app/src/main/java/com/aster/ondevice/receiver/: BootReceiver.kt  SmsBroadcastReceiver.kt
app/src/main/java/com/aster/ondevice/service/: AsterAccessibilityService.kt  AsterNotificationService.kt  AsterService.kt  CommandHandler.kt  EventDeduplicator.kt  SmsPromoDetector.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
(+28 files in other folders)
